[gd_scene load_steps=7 format=2]

[ext_resource path="res://LucidaTypewriterBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TimelinesScreen.gd" type="Script" id=2]
[ext_resource path="res://Dizzybot_Looping_Remixed.mp3" type="AudioStream" id=3]
[ext_resource path="res://pizza-gf25c8d9a9_1280.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="TimelinesScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 538.5, 301.5 )
scale = Vector2( 0.869531, 0.591406 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 108.0
margin_top = 62.0
margin_right = 892.0
margin_bottom = 137.0
custom_colors/font_color = Color( 0.184314, 0.898039, 0.898039, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "YOU WERE HIT"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 286.0
margin_top = 158.0
margin_right = 767.0
margin_bottom = 279.0
color = Color( 0.0823529, 0.0745098, 0.0745098, 1 )

[node name="continue\?" type="Label" parent="."]
margin_left = 265.0
margin_top = 235.0
margin_right = 776.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 2 )
text = "Continue in a new timeline?"
align = 1

[node name="numResets" type="Label" parent="."]
margin_left = 253.0
margin_top = 182.0
margin_right = 764.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 2 )
text = "TIMELINE # TERMINATED"
align = 1

[node name="replayBtn" type="Button" parent="."]
margin_left = 404.0
margin_top = 315.0
margin_right = 617.0
margin_bottom = 413.0
text = "ENTER AN ALTERNATE TIMELINE"

[node name="quitBtn" type="Button" parent="."]
margin_left = 443.0
margin_top = 440.0
margin_right = 575.0
margin_bottom = 507.0
text = "END GAME"

[node name="timelinesMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="replayBtn" to="." method="_on_replayBtn_pressed"]
[connection signal="pressed" from="quitBtn" to="." method="_on_quitBtn_pressed"]
